--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,17 +26,29 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Initialize Terraform
-      run: terraform init
 
+
+    # ✅ Initialize Terraform (Includes Modules)
+    - name: Initialize Terraform with Modules
+      run: terraform init -reconfigure
+      working-directory: .env/dev  # ✅ Set working directory
+
+    # ✅ Validate Terraform Configuration
     - name: Validate Terraform Configuration
       run: terraform validate
+      working-directory: .env/dev  # ✅ Set working directory
 
+    # ✅ Format Check
     - name: Terraform Format Check
       run: terraform fmt -check
+      working-directory: .env/dev  # ✅ Set working directory
 
+    # ✅ Generate Terraform Plan
     - name: Terraform Plan
-      run: terraform plan -input=false
+      run: terraform plan -input=false -out=tfplan
+      working-directory: .env/dev  # ✅ Set working directory
 
+    # ✅ Apply Terraform (if plan exists)
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false
+      run: terraform apply -auto-approve tfplan
+      working-directory: .env/dev  # ✅ Set working directory
