--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,35 +20,42 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+    # ✅ Install Terraform manually (since auto-install was removed)
+    - name: Install Terraform
+      run: |
+        sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
+        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
+        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+        sudo apt-get update && sudo apt-get install -y terraform
+        terraform -version  # ✅ Verify Terraform installation
+
     # ✅ Authenticate with Azure using AZURE_CREDENTIALS secret
     - name: Azure Login
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-
-
     # ✅ Initialize Terraform (Includes Modules)
     - name: Initialize Terraform with Modules
       run: terraform init -reconfigure
-      working-directory: .env/dev  # ✅ Set working directory
+      working-directory: ./terraform  # ✅ Set working directory
 
     # ✅ Validate Terraform Configuration
     - name: Validate Terraform Configuration
       run: terraform validate
-      working-directory: .env/dev  # ✅ Set working directory
+      working-directory: ./terraform  # ✅ Set working directory
 
     # ✅ Format Check
     - name: Terraform Format Check
       run: terraform fmt -check
-      working-directory: .env/dev  # ✅ Set working directory
+      working-directory: ./terraform  # ✅ Set working directory
 
     # ✅ Generate Terraform Plan
     - name: Terraform Plan
       run: terraform plan -input=false -out=tfplan
-      working-directory: .env/dev  # ✅ Set working directory
+      working-directory: ./terraform  # ✅ Set working directory
 
     # ✅ Apply Terraform (if plan exists)
     - name: Terraform Apply
       run: terraform apply -auto-approve tfplan
-      working-directory: .env/dev  # ✅ Set working directory
+      working-directory: ./terraform  # ✅ Set working directory
