--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,12 +23,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    # ✅ Install Azure CLI before login
-    - name: Install Azure CLI
+    # ✅ Ensure Azure CLI is Installed
+    - name: Check Azure CLI
       run: |
-        sudo apt-get update
-        sudo apt-get install -y azure-cli
-        az version  # Check if Azure CLI is installed
+        if ! command -v az &> /dev/null; then
+          sudo apt-get update
+          sudo apt-get install -y azure-cli
+        fi
+        az version  # Verify installation
 
     # ✅ Authenticate to Azure
     - name: Azure Login
@@ -36,35 +38,24 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # ✅ Install Terraform CLI
-    - name: 'Terraform Setup'
+    # ✅ Setup Terraform
+    - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
 
-    - name: 'Terraform Init'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: latest
-        tf_actions_subcommand: 'init'
-        tf_actions_working_dir: "./env/dev"
+    # ✅ Run Terraform Commands
+    - name: Terraform Init
+      run: terraform init
+      working-directory: ./env/dev
 
-    - name: 'Terraform Validate'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: latest
-        tf_actions_subcommand: 'validate'
-        tf_actions_working_dir: "./env/dev"
+    - name: Terraform Validate
+      run: terraform validate
+      working-directory: ./env/dev
 
-    - name: 'Terraform Plan'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: latest
-        tf_actions_subcommand: 'plan'
-        tf_actions_working_dir: "./env/dev"
+    - name: Terraform Plan
+      run: terraform plan -out=tfplan -input=false
+      working-directory: ./env/dev
 
-    - name: 'Terraform Apply'
-      if: "github.ref == 'refs/heads/main'"
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: latest
-        tf_actions_subcommand: 'apply'
-        tf_actions_working_dir: "./env/dev"
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main'
+      run: terraform apply -auto-approve tfplan
+      working-directory: ./env/dev
